# bitshares-core

./: .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  0001-add-absolute-path-check-for-fc-.git.patch  CMakeLists.txt  CONTRIBUTORS.txt  DEV_README.md  Dockerfile  Doxyfile  HEADER  LICENSE  LICENSE.md  LICENSE.txt  QUICKSTART_en.md  QUICKSTART_ru.md  README-back.md  README-docker.md  README.md  Vagrantfile  api_access.json  build-ubuntu.md  build_number  cmd.txt  current_version  cybex_build.sh  genesis.json  gui_version  sonar-branch-target.properties  sonar-project.properties  testcleanup.sh  testnet-shared-accounts.txt  testnet-shared-balances.txt  testnet-shared-committee-members.txt  testnet-shared-private-keys.txt  testnet-shared-vesting-balances.txt  testnet-shared-witnesses.txt
devel/: CMakeLists.txt  api_wrapper.cpp  wallet_lib.cpp
devel/example/: Makefile  main.cpp  wallet.cmd
devel/include/: api_wrapper.hpp  wallet_lib.hpp
libraries/: CMakeLists.txt  README.md
libraries/app/: CMakeLists.txt  api.cpp  api_objects.cpp  application.cpp  application_impl.hxx  config_util.cpp  database_api.cpp  database_api_helper.hxx  database_api_impl.hxx  impacted.cpp  plugin.cpp  plugin_type.cpp  util.cpp
libraries/chain/: CMakeLists.txt  account_evaluator.cpp  account_object.cpp  account_operations.cpp  address.cpp  application.cpp  assert_evaluator.cpp  asset.cpp  asset_evaluator.cpp  asset_object.cpp  balance_evaluator.cpp  block.cpp  block_database.cpp  bond_evaluator.cpp  buyback.cpp  call_order_evaluator.cpp  committee_member_evaluator.cpp  confidential_evaluator.cpp  credit_offer_evaluator.cpp  custom_authority_evaluator.cpp  custom_authority_object.cpp  database.cpp  db_balance.cpp  db_block.cpp  db_debug.cpp  db_genesis.cpp  db_getter.cpp  db_init.cpp  db_maint.cpp  db_management.cpp  db_market.cpp  db_notify.cpp  db_reflect_cmp.tmpl  db_update.cpp  db_witness_schedule.cpp  delegate_evaluator.cpp  escrow_evaluator.cpp  evaluator.cpp  exceptions.cpp  fba_object.cpp  (+43 more)
libraries/db/: CMakeLists.txt  index.cpp  object_database.cpp  type_serializer.cpp  undo_database.cpp  upgrade_leveldb.cpp
libraries/deterministic_openssl_rand/: CMakeLists.txt  deterministic_openssl_rand.cpp
libraries/egenesis/: CMakeLists.txt  README-dev.md  egenesis_brief.cpp.tmpl  egenesis_full.cpp.tmpl  egenesis_none.cpp  embed_genesis.cmake  embed_genesis.cpp  genesis-dev-key.txt  genesis-dev.json  genesis.json  seed-nodes-testnet.txt  seed-nodes.txt  tusc-genesis.json
libraries/leveldb-msvc/: readme.txt
libraries/net/: CMakeLists.txt  core_messages.cpp  exceptions.cpp  message.cpp  message_oriented_connection.cpp  node.cpp  node_impl.hxx  peer_connection.cpp  peer_database.cpp  stcp_socket.cpp
libraries/p2p/: CMakeLists.txt  design.md  message_oriented_connection.cpp  node.cpp  peer_connection.cpp  stcp_socket.cpp
libraries/plugins/: CMakeLists.txt  README.md  make_new_plugin.sh
libraries/protocol/: CMakeLists.txt  account.cpp  address.cpp  assert.cpp  asset.cpp  asset_ops.cpp  authority.cpp  block.cpp  chain_parameters.cpp  committee_member.cpp  confidential.cpp  credit_offer.cpp  custom.cpp  custom_authority.cpp  fee_schedule.cpp  fee_schedule_calc.cpp  fee_schedule_reflect.cpp  fee_schedule_serialization_pack.cpp  fee_schedule_serialization_variant.cpp  fee_schedule_set_fee.cpp  htlc.cpp  liquidity_pool.cpp  market.cpp  memo.cpp  operations.cpp  proposal.cpp  pts_address.cpp  restriction.cpp  restriction_predicate.cpp  samet_fund.cpp  small_ops.cpp  special_authority.cpp  ticket.cpp  transaction.cpp  transfer.cpp  types.cpp  vote.cpp  withdraw_permission.cpp  witness.cpp  worker.cpp
libraries/time/: CMakeLists.txt  time.cpp
libraries/utilities/: CMakeLists.txt  elasticsearch.cpp  file_util.cpp  git_revision.cpp.in  key_conversion.cpp  recurring_task.cpp  string_escape.cpp  tempdir.cpp  words.cpp
libraries/wallet/: CMakeLists.txt  Doxyfile.in  api_documentation_standin.cpp  cache.cpp  generate_api_documentation.pl  operation_printer.cpp  operation_printer.hpp  reflect_util.cpp  wallet.cpp  wallet_account.cpp  wallet_api.cpp  wallet_api_impl.cpp  wallet_api_impl.hpp  wallet_asset.cpp  wallet_blockchain_inspection.cpp  wallet_builder.cpp  wallet_committee.cpp  wallet_debug.cpp  wallet_fee_change.cpp  wallet_general.cpp  wallet_governance.cpp  wallet_help.cpp  wallet_network.cpp  wallet_param_change.cpp  wallet_privacy_mode.cpp  wallet_results.cpp  wallet_sign.cpp  wallet_trading.cpp  wallet_transaction_builder.cpp  wallet_transfer.cpp  wallet_voting.cpp
programs/: CMakeLists.txt  README.md
programs/backup/: CMakeLists.txt  main.cpp
programs/build_helpers/: CMakeLists.txt  build_and_test  build_for_cache  build_protocol  buildstep  cat-parts.cmake  check_reflect.py  make_with_sonar  member_enumerator.cpp  run-node-test  scan_with_sonar  scan_with_sonar_step_1  scan_with_sonar_step_2  scan_with_sonar_step_3  scan_with_sonar_step_4  set_sonar_branch  set_sonar_branch_for_github_actions
programs/cli_full_wallet/: CMakeLists.txt  main.cpp
programs/cli_wallet/: CMakeLists.txt  cli_wallet.1  cli_wallet.h2m  cookbook.md  main.cpp
programs/debug_node/: CMakeLists.txt  main.cpp
programs/delayed_node/: CMakeLists.txt  main.cpp
programs/field_reflector/: CMakeLists.txt
programs/full_web_node/: BUILD.md  BlockChain.cpp  BlockChain.hpp  CMakeLists.txt  Info.plist.in  main.cpp
programs/genesis_util/: CMakeLists.txt  apply_patch.py  convert_address.cpp  generate_init_patch.py  genesis_update.cpp  get_dev_key.cpp  upgrade_members.py
programs/js_operation_serializer/: CMakeLists.txt  main.cpp
programs/light_client/: Account.cpp  Account.hpp  Asset.cpp  Asset.hpp  Balance.cpp  Balance.hpp  BoostMultiIndex.hpp  CMakeLists.txt  ChainDataModel.cpp  ChainDataModel.hpp  ClientDataModel.cpp  ClientDataModel.hpp  GrapheneApplication.cpp  GrapheneApplication.hpp  GrapheneObject.cpp  GrapheneObject.hpp  Operations.cpp  Operations.hpp  README.md  Transaction.cpp  Transaction.hpp  Wallet.cpp  Wallet.hpp  main.cpp
programs/size_checker/: main.cpp  (+1 more)
tests/: CMakeLists.txt
(+708 files in other folders)
