if( MINGW )
    # MinGW requires a specific order of included libraries ( CURL before ZLib )
    find_package( ZLIB REQUIRED )
    SET( CURL_ADDITIONAL_LIBS ${ZLIB_LIBRARY} )
endif( MINGW )
if ( MSVC )
    SET( CURL_ADDITIONAL_LIBS Wldap32 )
endif( MSVC )

if( WIN32 )
    LIST( APPEND CURL_ADDITIONAL_LIBS ${PLATFORM_SPECIFIC_LIBS} )
endif( WIN32 )

add_subdirectory( fc )
add_subdirectory( db )
add_subdirectory( chain )
add_subdirectory( egenesis )
add_subdirectory( net )
add_subdirectory( utilities )
add_subdirectory( app )
add_subdirectory( plugins )
add_subdirectory( wallet )
add_subdirectory( protocol )
