add_subdirectory( cli_wallet )
add_subdirectory( witness_node )
add_subdirectory( js_operation_serializer )
add_subdirectory( size_checker )

set(BUILD_QT_GUI FALSE CACHE BOOL "Build the Qt-based light client GUI")
if(BUILD_QT_GUI)
   add_subdirectory(light_client)
endif()
set(BUILD_WEB_NODE FALSE CACHE BOOL "Build the Qt-based full node with web GUI")
if(BUILD_WEB_NODE)
   add_subdirectory(full_web_node)
endif()
