add_subdirectory( witness )
add_subdirectory( account_history )
add_subdirectory( elasticsearch )
add_subdirectory( market_history )
add_subdirectory( grouped_orders )
add_subdirectory( delayed_node )
add_subdirectory( debug_witness )
add_subdirectory( snapshot )
add_subdirectory( es_objects )
add_subdirectory( api_helper_indexes )
if(${LOAD_QUERY_TXID_PLUGIN} STREQUAL "ON")
    add_subdirectory( query_txid )
endif()
